public/fonts.css
@font-face {
  font-family: 'icomoon';
  src: url('./icomoon.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

[class^='icon-'],
[class*=' icon-'] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-size: 1.25rem;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-lg {
  font-size: 1.5rem;
}

[class^='icon-'],
[class*=' icon-'] {
  /* use !important to prevent issues with browser extensions that change fonts */
  font-family: 'icomoon' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* icon-add_box */
.icon-add-element:before {
  content: '\e146';
}

/* icon-cloud_upload */
.icon-cloud-upload:before {
  content: '\e2c3';
}

/* icon-cloud_done */
.icon-cloud-synced:before {
  content: '\e2bf';
}

/* icon-delete */
.icon-delete:before {
  content: '\e872';
}

/* icon-title */
.icon-text:before {
  content: '\e264';
}

/* icon-restore */
.icon-restore:before {
  content: '\e8b3';
}

/* icon-photo */
.icon-image.static:before {
  content: '\e410';
}

/* icon-wallpaper */
.icon-image.dynamic:before {
  content: '\e1bc';
}

/* icon-keyboard_arrow_down */
.icon-cheveron-down:before {
  content: '\e313';
}
.icon-cheveron-up:before {
  content: '\e313';
  transform: rotate(180deg);
}

/* icon-visibility */
.icon-visible:before {
  content: '\e8f4';
}

/* icon-view_module */
.icon-container:before {
  content: '\e8f0';
}

/* icon-visibility_off */
.icon-hidden:before {
  content: '\e8f5';
}

